# diskwhy

./: README.md  pyproject.toml
src/diskwhy/: __init__.py  __main__.py  cli.py  core.py  formatting.py
tests/: __init__.py  test_cli.py  test_core.py  test_formatting.py
